# MBHaxe

./: .gitignore  CHANGELOG.md  LICENSE  README-macOS.md  README.md  compile-android.hxml  compile-c.hxml  compile-ios.hxml  compile-js-rel.hxml  compile-js.hxml  compile-linux.hxml  compile-linux.sh  compile-macos.hxml  compile-uwp.hxml  compile.bat  compile.hxml  index.html  marblegame.hl  package-macos.sh  zyheaps.xml
.circleci/: config.yml
.github/: FUNDING.yml
Export/android/: .gitignore  .gitmodules  readme.md  settings.gradle
data/: englishStrings.inf  filesystem.manifest  manifest.json
data/font/: Arial Bold.fnt  Arial14.fnt  ArialBold14px.fnt  ColiseumRR.fnt  DomCasual24px.fnt  DomCasual24px.fnt.bak  DomCasual32px.fnt  DomCasualD.fnt  EXPON.fnt  Expo32.fnt  Expo50.fnt  Lucida Console.fnt  MarkerFelt.fnt  arial.fnt  arial_bold_14.xml  charset.txt
data/sound/: lb_achievement.NOTUSEDwav  lb_achievementall.NOTUSEDwav
data/ui/: playMissionGui.gui
ios/: .gitignore  project.yml
ios/Config/: Local.xcconfig.example
ios/MBHaxeIOS/: Info.plist  LaunchScreen.storyboard  main.m
linux-dist/: run-marblegame-debug.sh  run-marblegame.sh
macos-dist/: README.txt
server/: MasterServer.hx  Signalling.hx  build_master.hxml  build_signalling.hxml
src/: Analytics.hx  AudioManager.hx  CameraController.hx  Console.hx  Debug.hx  DifBuilder.hx  DtsObject.hx  DynamicPolygon.hx  ForceObject.hx  GameObject.hx  Gamepad.hx  Http.hx  InstanceManager.hx  InteriorGeometry.hx  InteriorObject.hx  JSPlatform.hx  LRUCache.hx  Leaderboards.hx  MPCustoms.hx  Macros.hx  Main.hx  Marble.hx  MarbleGame.hx  MarbleWorld.hx  Marbleland.hx  MeshBatch.hx  Mission.hx  MissionList.hx  ParticleSystem.hx  ParticlesMesh.hx  PathedInterior.hx  PathedInteriorMarker.hx  Polygon.hx  PreviewWorld.hx  ProfilerUI.hx  Radar.hx  RandomLCG.hx  Renderer.hx  Replay.hx  Resource.hx  (+6 more)
src/collision/: BVHTree.hx  BoxCollisionEntity.hx  CCDCollision.hx  Collision.hx  CollisionEntity.hx  CollisionHull.hx  CollisionInfo.hx  CollisionPacket.hx  CollisionPool.hx  CollisionSurface.hx  CollisionWorld.hx  Grid.hx  GridBroadphase.hx  KDTree.hx  SAP.hx  SphereCollisionEntity.hx
src/dif/: AISpecialNode.hx  AnimatedLight.hx  BSPNode.hx  BSPSolidLeaf.hx  ConvexHull.hx  CoordBin.hx  Dif.hx  Edge.hx  Edge2.hx  FFSurface.hx  ForceField.hx  GameEntity.hx  Interior.hx  InteriorPathFollower.hx  LightMap.hx  LightState.hx  NullSurface.hx  Plane.hx  Polyhedron.hx  PolyhedronEdge.hx  Portal.hx  ReaderExtensions.hx  StateData.hx  Surface.hx  TexGenEQ.hx  TexMatrix.hx  Trigger.hx  VehicleCollision.hx  Version.hx  WayPoint.hx  WindingIndex.hx  WriterExtensions.hx  Zone.hx
src/dts/: Detail.hx  (+15 more)
uwp/: .gitignore  CMakeLists.txt  Package.appxmanifest  main.cpp
(+470 files in other folders)
